Fix side gradients causing horizontal scrolling in narrow viewports

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -115,23 +115,6 @@ header {
 	
 	position: relative;
 }
-	.main::before,
-	.main::after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		width: 96px;
-	}
-	.main::before {
-		right: 100%;
-		background: linear-gradient(to left, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-	}
-	.main::after {
-		left: 100%;
-		background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-	}
 
 @media (min-width: 412px) {
 	.nav-link {
@@ -165,14 +148,13 @@ header {
 				color: hsl(0, 0%, 30%);
 			}
 	
-	header {
+	header,
+	header.main {
 		margin-top: 96px;
+		padding: 0;
 	}
 }
 @media (min-width: 760px) {
-	/*.logo {
-		width: 166px;
-	}*/
 	.logo img.logo-short {
 		display: inline-block;
 	}
@@ -187,6 +169,25 @@ header {
 		.nav-link::before {
 			left: 16px;
 		}
+	
+	.main::before,
+	.main::after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		width: 96px;
+		max-width: calc(100vw - 768px - 112px); /* I am honestly not sure why 112 seems to be the magic number. */
+	}
+	.main::before {
+		right: 100%;
+		background: linear-gradient(to left, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+	}
+	.main::after {
+		left: 100%;
+		background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+	}
 }
 @media (min-width: 932px) {
 	.header .feed-links {
